--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@react-native-community/eslint-config": "^0.0.5",
     "@semantic-release/changelog": "^3.0.4",
     "@semantic-release/git": "^7.0.16",
+    "@types/react": "^16.9.2",
+    "@types/react-native": "^0.60.13",
     "commitlint": "^8.1.0",
     "eslint": "^6.3.0",
     "eslint-plugin-prettier": "^3.1.0",
@@ -51,6 +53,7 @@
     "pretty-quick": "^1.11.1",
     "react": "^16.8.3",
     "react-native": "^0.59.10",
-    "semantic-release": "^15.13.24"
+    "semantic-release": "^15.13.24",
+    "typescript": "^3.6.3"
   }
 }
